--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,39 @@
 
-.container {
-  margin: 0 auto;
-  text-align: center;
-}
-
-.row {
-  display: flex;
-  flex-flow: wrap;
-}
-
 .form-div {
-  width: 17rem;
-  background-color: lightgray;
+  width: auto;
   padding: 1rem;
 }
 
 .form-label {
   text-align: right;
   font-family: sans-serif;
+  font-weight: bold;
 }
 
 .form-button {
-  justify-content: right;
+  text-align: right;
   background-color: purple;
   color: white;
   border: 0;
+  width: 20px;
 }
 
 form {
   width: 100%;
+}
+
+input {
+  width: 100%;
+  height: 2rem;
+}
+
+.form-row {
+  display: flex;
+  flex-flow: wrap;
+}
+
+.inner-row {
+  width: calc(100% / 2);
 }
 
 .placeholder-img {
@@ -37,14 +42,28 @@ form {
 
 .form-h2 {
   text-align: left;
-  margin-left: 1rem;
   font-family: sans-serif;
 }
 
-.head-box {
+header {
   background-color: purple;
+  margin: 0;
+  height: 2rem;
 }
 
-.head-box-text {
-  text-align: left;
+textarea {
+  width: 100%;
+}
+
+button {
+  float: right;
+  padding: 0.2rem 0.5rem;
+  background-color: purple;
+  color: white;
+  border: 0;
+}
+
+.rounded {
+  border-radius: 5px;
+  border: 0;
 }
