Form prepends new entry to dom

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,3 +86,21 @@ ul {
   list-style-type: none;
   padding: 0;
 }
+
+.header-div {
+  flex-wrap: nowrap;
+}
+
+.header-nav {
+  float: left;
+  margin-top: 0.9rem;
+}
+
+.header-nav-item {
+  text-decoration: none;
+  color: white;
+}
+
+.header {
+  width: 17%;
+}
